# minh_v3

./: .env.example  .gitignore  AI_CONTEXT.md  ARCHITECTURAL_BREAKTHROUGH_SUMMARY.md  BRIDGE_OPTIMIZATION_PHASE_2_COMPLETE.md  CLAUDE.md  DASHBOARD_CONSOLIDATION_PLAN.md  FAKE_DATA_PURGE_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MINHOS_V3_COMPONENTS.md  ML_IMPLEMENTATION_COMPLETE.md  ML_KELLY_CRITERION_COMPLETE_SUMMARY.md  MONDAY_DEPLOYMENT_CHECKLIST.md  Makefile  NEXT_SESSION_ROADMAP.md  PHASE_2_SYSTEM_INTEGRATION_COMPLETE.md  PHASE_2_SYSTEM_INTEGRATION_COMPLETE_SUMMARY.md  PHASE_3_DEPLOYMENT_READY.md  PHASE_3_PRODUCTION_DEPLOYMENT_COMPLETE.md  PHASE_3_PRODUCTION_DEPLOYMENT_STATUS.md  PHASE_3_RISK_VALIDATION_COMPLETE.md  PHILOSOPHY_ALIGNMENT_REVIEW.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_TODO.md  README.md  REAL_DATA_STATUS_REPORT.md  SERVICE_MIGRATION_COMPLETE_SUMMARY.md  STREAMING_FIX_IMPLEMENTATION.md  SYMBOL_MANAGEMENT_MIGRATION_GUIDE.md  SYSTEM_TRUTH.md  VERIFICATION_PROMPT_FOR_WINDOWS.md  VERIFICATION_REPORT.md  WINDOWS_BRIDGE_DATA_REQUIREMENTS.md  WINDOWS_DEPLOYMENT_PROMPT.md  bridge_comparison_results.json  claude_wsl.bat  client.py  config.py  config_drift_history.json  configure_unrestricted_access.ps1  (+63 more)
User/: MINHOS_COMPLETE_SYSTEM_DOCUMENTATION.md  MINHOS_FEATURES_DOCUMENTATION.md  context_for_ai.py  minhos_ai_enhancement_strategy.md  production_readiness.py  system_truth.py
User Tools/: add_documentation.py  context_for_ai.py  system_truth.py
bridge_windows/: MinhOSBridgeStudy.cpp  bridge.py  file_access_api.py  install.ps1
capabilities/: __init__.py
capabilities/ensemble/: __init__.py  ensemble_manager.py
capabilities/position_sizing/: __init__.py  api.py
capabilities/prediction/: __init__.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: alerts.py  minhos_v4.json  symbols.json
data/: state.db-shm  state.db-wal
data/backups/: trade_history_backup.json
data_backup_20250724_194217/: state.sync-conflict-20250724-185955-E53UNVM.db-wal  state.sync-conflict-20250724-190056-E53UNVM.db-shm
docs/: 250730 connection research.md  HISTORICAL_DATA_INTEGRATION.md  SESSION_SUMMARY_2025_01_24.md  SESSION_SUMMARY_2025_01_24_HISTORICAL_DATA.md  Sierra Chart ACSIL development.md  Sierra chart DTC update.md  sierra chart data research.md
docs/memory/: ai_architecture.md  api_integrations.md  chat_interface.md  dashboard_evolution.md  historical_data_integration.md  symbol_management.md
docs/philosophy/: AI_TRADING_PHILOSOPHY.md  DECISION_QUALITY_FRAMEWORK.md  IMPLEMENTATION_SUMMARY.md
docs/technical/: MARKET_DATA_MIGRATION.md  MIGRATION_COMPLETE_SUMMARY.md  STREAMING_FIX_GUIDE.md
examples/: unified_market_data_usage.py
implementation/chat_integration/: ARCHITECTURE_DESIGN.md  IMPLEMENTATION_PLAN.md  NEXT_SESSION_CHECKLIST.md  PROGRESS_TRACKER.md  README.md  RESEARCH_SUMMARY.md
implementation/market_data_bridge_optimization/: MARKET_DATA_BRIDGE_OPTIMIZATION_PLAN.md  PROGRESS_TRACKER.json  PROGRESS_TRACKER.sync-conflict-20250729-131147-E53UNVM.json  README.md
implementation/ml_kelly_criterion_week5/: DAY_2_COMPLETION_SUMMARY.md  NEXT_STEPS_PRODUCTION_DEPLOYMENT.md  PROGRESS_TRACKER.md  README.md  WEEK_6_INTEGRATION_COMPLETE.md  test_day1_implementation.py  test_ml_integration.py
implementation/service_architecture_redesign_v2/: MIGRATION_GUIDE.md  README.md  TECHNICAL_SPECIFICATION.md  TESTING_STRATEGY.md
implementation/v3/: DAILY_PROGRESS.md  README.md  (+7 more)
minhos/: __init__.py  main.py
ml_models/: lstm_model_metadata.json
scripts/: add_cron.sh  backup_minhos_data.sh  bootstrap_trade_history.py  demonstrate_ai_context.py  diagnose_streaming.py  fix_ml_dashboard_status.py  historical_data_manager.py  install_sierra_service.sh  populate_all_available_data.py  restore_minhos_data.sh  scheduled_start.sh  show_transformation.py  start_continuous_monitoring.py  sunday_start.sh  switch_bridge_host.sh  system_health_check.py  tcp_optimize_linux.sh  test_ai_dashboard_integration.py  test_bridge_comparison.py  test_bridge_file_access.py  test_discovered_sierra_files.py  test_historical_integration.py  test_optimized_client.py  test_real_historical_data.py  trading_hours_validation.py  train_ensemble_models.py  train_lstm_model.py  train_ml_models.py  verify_ai_historical_context.py
systemd/: minhos-sierra-client.service
ta-lib/: Makefile  bin
tests/: conftest.py  test_basic.py
windows/: README.md  WINDOWS_SETUP_GUIDE.md  bridge_api_sse_enhancement.py  bridge_monitor.bat  bridge_service_status.bat  bridge_start.bat  bridge_status.bat  check_status.bat  create_portable_bridge.py  open_dashboard.bat  service_status.bat  setup_new_bridge.ps1  sierra_chart_settings.md  sierra_data_investigator.bat  sierra_data_investigator.ps1  start_monitor.bat  tcp_optimize_windows.bat  test_file_api.bat  test_file_api.ps1  test_tcp_optimizations.py
(+203 files in other folders)
